add helm resource info
