# docs/swagger.json
@@ -29,6 +29,18 @@
                 "responses": {}
             }
         },
+        "/api/clusters/:clusterId/namespaces/:namespace/releases/:release": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get Release Info",
+                "responses": {}
+            }
+        },
         "/api/repositories": {
             "get": {
                 "description": "List Repository",
